# aiida-wien2k

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  WIEN2k.py  case.struct  eos_workchain.py  plugin_name.txt  pyproject.toml  setup.py
.github/workflows/: cd.yml  ci.yml  validate_release_tag.py
aiida_wien2k/: __init__.py
aiida_wien2k/calculations/: init_lapw.py  run123_lapw.py  run_lapw.py  run_lapw_clmextrapol.py  x_optimize.py  x_sgroup.py
aiida_wien2k/configs/codes/: case.struct  init_lapw.yml  run123_lapw.yml  run_lapw.yml  run_lapw_clmextrapol.yml  x_optimize.yml  x_sgroup.yml
aiida_wien2k/configs/computers/: localhost.yml
aiida_wien2k/parsers/: init_lapw.py  optimize.py  scf.py  scf123.py  sgroup.py
aiida_wien2k/workflows/: eos_workchain.py  scf123_workchain.py  scf_workchain.py
etc/: :log  case.struct  commonwf-oxides_set2-bis_structures.aiida  delta2.py  get_results.py  launch_common_eos.py  launch_common_eos_oxides.py  launch_common_scf.py  launch_eos_workchain.py  launch_oxides_eos_workchain.py  launch_oxides_scf123_workchain.py  launch_oxides_scf_workchain.py  launch_scf123_workchain.py  launch_scf_workchain.py  launch_wien2k.py  notes.md  query_clean_db.py  query_oxides.py  query_oxides_eos.py  rabbitmq.conf  rescaled-structures.txt  results - Copy.json  results-VASP-SC.json  results-WIEN2k-prec-2-points.json  results-prec-1-newfit.json  results-prec-2-newfit.json  results-prec-2-tetra-psi11.json  results-prec-2-tetra-psi12.json  results-prec-3-newfit.json  results.json  results.txt  results_Rb-.txt  setup-OR.notes  wien2k_SCF_Si.py
etc/collate-plots/: create_latex_file.py
etc/eos_utils/: eosfit_31_adapted.py
etc/eos_utils/cottenier_data_set1/: parse-cottenier.py  results-cottenier-wien2k.json
etc/outputs/: .gitignore  generate_deltas.py  generate_many.py  generate_plots.py  show-plots-GUI.ipynb
src/aiida_wien2k/: __init__.py
src/aiida_wien2k/workflows/: scf123_workchain.py
tests/: conftest.py
tests/calculations/: test_scf123_lapw.py
tests/parsers/: test_scf123.py
tests/parsers/fixtures/scf123/default/: _scheduler-stderr.txt  case.struct  prec3k.dayfile  prec3k.in0  prec3k.klist  prec3k.scf0  prec3k.scf1  prec3k.scf2  prec3k.scfc  prec3k.scfm
tests/parsers/fixtures/scf123/failed_warning_converg/: _scheduler-stderr.txt  case.struct  prec3k.dayfile  prec3k.in0  prec3k.klist  prec3k.scf0  prec3k.scf1  prec3k.scf2  prec3k.scfc  prec3k.scfm
tests/parsers/fixtures/scf123/failed_warning_other/: _scheduler-stderr.txt  prec3k.scf2
tests/parsers/fixtures/scf123/failed_warning_qtl_b/: case.struct  prec3k.dayfile  prec3k.in0  prec3k.klist  prec3k.scf0  prec3k.scf1  prec3k.scfc  prec3k.scfm
tests/parsers/test_scf123/: test_default.yml  test_failed_warning_converg.yml  test_failed_warning_other.yml  test_failed_warning_qtl_b.yml
